--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Nadia Abdellaoui Vesco | Pagina ufficiale</title>
     <meta name="description" content="Nadia A.Vesco è una specialista del retail con esperienza pluriennale di management nella moda e nel lusso.">
     <meta charset="utf-8">
-    <meta property="og:title" content="Nadia A.Vesco - Specialista nel settore retail">
+    <meta property="og:title" content="Nadia A.Vesco - Retail Specialist - Moda & Lusso">
     <meta property="og:image" content="images/Nadia_Vesco_Profile.png">
     <meta property="og:description" content="Nadia A.Vesco è una specialista del retail con esperienza pluriennale di management nella moda e nel lusso.">
     <meta property="og:site_name" content="Nadia A.Vesco"/>
