--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <img src="images/Nadia_Vesco_Profile.png" alt="Nadia A.Vesco" class="img-profile-circle">
         <h1>Nadia Abdellaoui Vesco</h1>
         <h2>Retail Specialist - Moda & Lusso</h2>
-        <p>Manager italiana specialista del retail con esperienza pluriennale nei settori della moda del lusso. Esperta in tendenze, techniche di vendita e coaching.</p>
+        <p>Manager italiana specialista del retail con esperienza pluriennale nei settori della moda del lusso. Esperta in tendenze, tecniche di vendita e coaching.</p>
         <p>Buona conoscenza dell'inglese, livello scolastico di spagnolo.</p>
         <p><em>"Se l'esperienza cliente diventa sensoriale, il primo sguardo al personale del negozio rimane fondamentale."</em></p>
       </div>
